tdf#166939: Don't pass invalid starting index when creating a view

A style name can be as short as one character; a two-character prefix
can already be too long.

Change-Id: I041894d8c68942a49aef399edaccbcd48522ae83
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186328
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit faab5ca6174e3e581661784216410e2bc88da081)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186344
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>